--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "yamljs": "^0.3.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
